fix: activity modal ui bug on safari

--- a/apps/web/src/components/activite/ActiviteDetailsModal/ActiviteDetailsModal.module.css
+++ b/apps/web/src/components/activite/ActiviteDetailsModal/ActiviteDetailsModal.module.css
@@ -1,12 +1,16 @@
 dialog.modal {
     :global .fr-modal__title {
-        position: absolute;
-        top: 32px;
+        margin-top: -32px;
+        display: block;
     }
 
     :global .fr-modal__content {
         margin-bottom: 40px;
     }
+}
+
+.titleIconContainer{
+    width: 56px;
 }
 
 .notes {
